syntax = "proto3";

package pb;

option go_package = "github.com/the-medo/talebound-backend/pb";

message ResetPasswordSendCodeRequest {
  string email = 1;
}

message ResetPasswordSendCodeResponse {
  bool success = 1;
  string message = 2;
}

message ResetPasswordVerifyCodeRequest {
  string secretCode = 1;
  string newPassword = 2;
}

message ResetPasswordVerifyCodeResponse {
  bool success = 1;
  string message = 2;
}

message ResetPasswordVerifyCodeValidityRequest {
  string secret_code = 1;
}

message ResetPasswordVerifyCodeValidityResponse {
  bool success = 1;
  string message = 2;
}